<resources>
    <string name="app_name">Wyncef</string>
    <string name="app_inventory">Inventário</string>
    <string name="app_items">Itens do Inventário</string>
    <string name="app_inventory_items">Itens</string>
    <string name="app_agency">Agência</string>
    <string name="app_category">Categoria</string>
    <string name="app_device">Dispositivo</string>
    <string name="app_tag">Etiqueta</string>

    <string name="menu_search">Pesquisar</string>
    <string name="menu_filter">Filtrar</string>
    <string name="menu_add">Adicionar</string>
    <string name="menu_send">Enviar</string>
    <string name="menu_selected">Selecionar</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_grid">Grade</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_save">Salvar</string>
    <string name="menu_check">OK</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_print">Imprimir</string>
    <string name="menu_tag">Etiquetar</string>
    <string name="menu_back">Voltar</string>
    <string name="menu_yes">Sim</string>
    <string name="menu_no">Não</string>
    <string name="menu_login">Login</string>
    <string name="menu_cancel">Cancelar</string>
    <string name="menu_voice">Falar</string>
    <string name="menu_scan">Escanear</string>

    <string name="nav_inventory">Inventários</string>
    <string name="nav_agency">Agências</string>
    <string name="nav_category">Categorias</string>
    <string name="nav_icon">Icones</string>
    <string name="nav_device">Dispositivos</string>
    <string name="nav_tag">Etiquetas</string>
    <string name="nav_more">Mais Opções</string>
    <string name="nav_dark">Modo Escuro</string>
    <string name="nav_about">Sobre</string>
    <string name="nav_exit">Sair</string>

    <string name="filter_a_z">Ordenar por A-Z</string>
    <string name="filter_z_a">Ordenar por Z-A</string>
    <string name="filter_date">Filtrar por data</string>

    <string name="fab_menu_device">Adicionar novo dispositivo</string>
    <string name="fab_menu_scan">Escanear código de barras</string>
    <string name="fab_menu_import">Importar de arquivo CSV</string>
    <string name="fab_menu_export">Exportar para arquivo CSV</string>

    <string name="text_view_version">Versão: %1$s</string>
    <string name="text_view_developers">Desenvolvido por</string>
    <string name="text_view_developers_body">VieiraTeam Developers</string>
    <string name="text_view_email">E-mail</string>
    <string name="text_view_feedback">Feedback</string>
    <string name="text_view_feedback_message">Descreva seu feedback</string>
    <string name="text_view_address">Endereço</string>
    <string name="text_view_address_body">Maximiliano Scholze, 54, Canoinhas-SC, Brasil</string>
    <string name="text_view_site">Site</string>
    <string name="text_view_github">Github</string>

    <string name="link_email">vieirateam.contact@gmail.com</string>
    <string name="link_site">https://sites.google.com/view/vieirateamdevelopers</string>
    <string name="link_github">https://github.com/vieirateamdevelopers</string>

    <string name="text_view_touch">Toque para adicionar</string>
    <string name="text_view_touch_icon">Toque para trocar</string>
    <string name="text_view_touch_about">Toque para visitar</string>
    <string name="text_view_touch_filter">Toque para aplicar</string>
    <string name="text_view_choose">Escolha uma opção</string>
    <string name="text_view_choose_date">Escolha o intervalo de datas</string>
    <string name="text_view_scan">Posicione a câmera para escanear</string>

    <string name="text_view_agency">Nome da Agência</string>
    <string name="text_view_date">Data do Inventário</string>
    <string name="text_view_cgc">CGC da Agência</string>
    <string name="text_view_state">Estado da Agência</string>
    <string name="text_view_example_agency">Ex: Florianópolis</string>
    <string name="text_view_example_cgc">Ex: 0413 (Apenas números)</string>
    <string name="text_view_example_state">Ex: SC</string>

    <string name="text_view_serial_number">Número de Série</string>
    <string name="text_view_logical_name">Nome Lógico</string>
    <string name="text_view_without_logical_name">Sem Nome Lógico</string>
    <string name="text_view_patrimony">Patrimônio</string>
    <string name="text_view_without_patrimony">Sem Patrimônio</string>
    <string name="text_view_patrimony_not_found">Não encontrado</string>
    <string name="text_view_status">Status</string>
    <string name="text_view_example_serial_number">Ex: PE101010</string>
    <string name="text_view_example_logical_name">Ex: 100 (Apenas números)</string>
    <string name="text_view_example_patrimony">Ex: 003982000</string>
    <string-array name="text_view_example_status">
        <item>EM USO</item>
        <item>SEM USO</item>
        <item>NÃO ENCONTRADO</item>
    </string-array>

    <string name="text_view_tag_make">Marca</string>
    <string name="text_view_tag_model">Modelo</string>
    <string name="text_view_tag_ip">Endereço IP</string>
    <string name="text_view_without_tag_make">Sem Marca</string>
    <string name="text_view_without_tag_model">Sem Modelo</string>
    <string name="text_view_without_tag_ip">Sem Endereço IP</string>
    <string name="text_view_example_tag_make">Ex: Lenovo</string>
    <string name="text_view_example_tag_model">Ex: Ultra Small Thinkcentre M93P Tiny</string>
    <string name="text_view_example_tag_ip">Ex: 10.110.10.110</string>

    <string name="text_tag_print_logical_name">Nome_Rede: <b>%1$s</b></string>
    <string name="text_tag_print_serial_number">N_Série: <b>%1$s</b></string>
    <string name="text_tag_print_patrimony">Patr: <b>%1$s</b></string>
    <string name="text_tag_print_make">Marca: <b>%1$s</b></string>
    <string name="text_tag_print_model">Modelo: <b>%1$s</b></string>
    <string name="text_tag_print_ip">IP: <b>%1$s</b></string>
    <string name="text_tag_print_progress">Imprimindo etiqueta(s)</string>

    <string name="text_view_items_verified_true">Equipamento Verificado</string>
    <string name="text_view_items_verified_false">Equipamento Não Verificado</string>

    <string name="text_view_category">Nome da Categoria</string>
    <string name="text_view_initials">Iniciais da Categoria</string>
    <string name="text_view_icon">Icone da Categoria</string>
    <string name="text_view_example_category">Ex: Estação de Trabalho</string>
    <string name="text_view_example_initials">Ex: ET</string>

    <string name="alert_items_empty">Nenhum item no inventário</string>
    <string name="alert_import_exists">Arquivo CSV já foi importado</string>
    <string name="alert_import_not_exists">Por gentileza, importe o arquivo CSV</string>
    <string name="alert_items_verified">Alguns itens não foram verificados</string>
    <string name="alert_inventory_empty">Nenhum inventário cadastrado</string>
    <string name="alert_agency_empty">Nenhuma agêcnia cadastrada</string>
    <string name="alert_category_empty">Nenhuma categoria cadastrada</string>
    <string name="alert_device_empty">Nenhum dispositivo cadastrado</string>
    <string name="alert_tag_empty">Nenhuma etiqueta cadastrada</string>

    <string name="alert_field_empty">Preencha todos os campos corretamente</string>
    <string name="alert_dialog_import">Deseja importar o arquivo CSV agora?</string>
    <string name="alert_dialog_export">Deseja exportar o arquivo CSV agora?</string>
    <string name="alert_dialog_about">Deseja visitar o endereço?</string>
    <string name="alert_device_logical_name">É necessário incluir agência e categoria para dar continuidade</string>
    <string name="alert_progress_import">Importando de arquivo CSV. \nAguarde por favor…</string>
    <string name="alert_progress_export">Exportando para arquivo CSV. \nAguarde por favor…</string>
    <string name="alert_complete_import">Arquivo importado com sucesso</string>
    <string name="alert_complete_export">Arquivo exportado com sucesso</string>
    <string name="alert_complete_print_ok">Etiqueta(s) gerada com sucesso</string>
    <string name="alert_complete_print_error">Erro ao gerar etiqueta(s)</string>
    <string name="alert_activity">Não foi possível iniciar a atividade</string>

    <string name="alert_agency_name_exists">Nome da agência já existe</string>
    <string name="alert_agency_cgc_exists">CGC da agência já existe</string>
    <string name="alert_category_name_exists">Nome da categoria já existe</string>
    <string name="alert_category_initials_exists">Iniciais da categoria já existe</string>
    <string name="alert_device_serial_number_exists">Número de série já existe</string>
    <string name="alert_device_logical_name_exists">Nome Lógico já existe</string>
    <string name="alert_device_patrimony_exists">Patrimônio já existe</string>
    <string name="alert_tag_ip">Endereço IP inválido</string>
    <string name="alert_tag_device">Este dispositivo não possui um nome lógico</string>

    <string name="alert_delete_item_title_one">Excluir 1 item?</string>
    <string name="alert_delete_item_title_more">Excluir %1$s itens?</string>
    <string name="alert_delete_item_body">Esta ação é permanente e não pode ser desfeita</string>

    <string name="alert_persmissions_read">Não foi possível iniciar a importação do arquivo CSV</string>
    <string name="alert_persmissions_write">Não foi possível iniciar a exportação do arquivo CSV</string>

</resources>
