<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_min"
                app:cardBackgroundColor="?attr/cardViewColor"
                app:cardElevation="@dimen/elevation_card_view">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_max"
                    android:gravity="center"
                    android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/nav_header_image_size"
                        android:layout_height="@dimen/nav_header_image_size"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/ic_launcher_round" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_max"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/text_view_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_min" />

            </LinearLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/card_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_min"
                app:cardBackgroundColor="?attr/cardViewColor"
                app:cardElevation="@dimen/elevation_card_view">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_max"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_developers"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_max"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_developers_body"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_min" />

            </LinearLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/card_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_min"
                app:cardBackgroundColor="?attr/cardViewColor"
                app:cardElevation="@dimen/elevation_card_view">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_max"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_email"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_max"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/link_email"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_min" />

            </LinearLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/card_view_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_min"
                app:cardBackgroundColor="?attr/cardViewColor"
                app:cardElevation="@dimen/elevation_card_view">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_max"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_address"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_max"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_address_body"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_min" />

            </LinearLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/card_view_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_min"
                app:cardBackgroundColor="?attr/cardViewColor"
                app:cardElevation="@dimen/elevation_card_view">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_max"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_site"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_max"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_touch_about"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_min" />

            </LinearLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/card_view_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_min"
                app:cardBackgroundColor="?attr/cardViewColor"
                app:cardElevation="@dimen/elevation_card_view">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_max"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_github"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_max"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_touch_about"
                        android:textColor="?attr/textViewColor"
                        android:textSize="@dimen/text_title_min" />

            </LinearLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </LinearLayout>

</ScrollView>

