<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/foregroundColor"
        android:padding="@dimen/layout_padding_max">

        <ImageView
            android:id="@+id/image_view_back_filter"
            android:layout_width="@dimen/bottom_sheet_image_size"
            android:layout_height="@dimen/bottom_sheet_image_size"
            android:layout_marginStart="@dimen/layout_margin_min"
            android:contentDescription="@string/menu_cancel"
            android:src="@drawable/ic_drawable_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_max"
            android:layout_marginEnd="@dimen/layout_margin_max"
            android:text="@string/text_view_choose"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorSecondaryDay"
            android:textSize="@dimen/text_title_min"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_view_back_filter"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/card_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_min"
        app:cardBackgroundColor="?attr/cardViewColor"
        android:layout_marginTop="@dimen/layout_padding_min"
        app:cardElevation="@dimen/elevation_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_max"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_a_z"
                android:textColor="?attr/textViewColor"
                android:textSize="@dimen/text_title_max"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_touch_filter"
                android:textColor="?attr/textViewColor"
                android:textSize="@dimen/text_title_min" />

        </LinearLayout>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/card_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_min"
        app:cardBackgroundColor="?attr/cardViewColor"
        app:cardElevation="@dimen/elevation_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_max"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_z_a"
                android:textColor="?attr/textViewColor"
                android:textSize="@dimen/text_title_max"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_touch_filter"
                android:textColor="?attr/textViewColor"
                android:textSize="@dimen/text_title_min" />

        </LinearLayout>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/card_view_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_min"
        app:cardBackgroundColor="?attr/cardViewColor"
        app:cardElevation="@dimen/elevation_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_max"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_date"
                android:textColor="?attr/textViewColor"
                android:textSize="@dimen/text_title_max"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_touch_filter"
                android:textColor="?attr/textViewColor"
                android:textSize="@dimen/text_title_min" />

        </LinearLayout>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

</LinearLayout>